intermediate save